Portfolio image links fixed

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,26 +43,26 @@
           </div>
         <div class="row">
   <div class="col-md-12 col-lg-6 col-sm-6">
-    <img class="m-3" src="../02-Homework/Assets/Images/v678-mynt-46-halloween_1.jpg" alt="Placeholder" style="width:300px" height="300">
+    <img class="m-3" src="v678-mynt-46-halloween_1.jpg" alt="Placeholder" style="width:300px" height="300">
   
   </div>
 
         <div class="col-md-12 col-lg-6 col-sm-6">
-          <img class="m-3" src="../02-Homework/Assets/Images/TreeHi-Res.jpg" alt="Placeholder" style="width:300px" height="300">
+          <img class="m-3" src="TreeHi-Res.jpg" alt="Placeholder" style="width:300px" height="300">
       </div>
       </div>
     
       <div class="row">
         <div class="col-md-12 col-lg-6 col-sm-6">
-          <img class="m-3" src="../02-Homework/Assets/Images/88d3f0267d002a88eaa2ab4aeac5d241.gif" alt="Placeholder" style="width:300px" height="300">
+          <img class="m-3" src="88d3f0267d002a88eaa2ab4aeac5d241.gif" alt="Placeholder" style="width:300px" height="300">
         </div>
         <div class="col-md-12 col-lg-6 col-sm-6">
-          <img class="m-3" src="../02-Homework/Assets/Images/tumblr_nc30spAGvJ1tlmr4wo1_500.jpg" alt="Placeholder" style="width:300px" height="300">
+          <img class="m-3" src="tumblr_nc30spAGvJ1tlmr4wo1_500.jpg" alt="Placeholder" style="width:300px" height="300">
       </div>
     </div>
       <div class="row">
         <div class="col-md-12 col-lg-6 col-sm-6">
-          <img class="m-3" src="../02-Homework/Assets/Images/Png.png" alt="Placeholder" style="width:300px" height="300">
+          <img class="m-3" src="Png.png" alt="Placeholder" style="width:300px" height="300">
       </div>
       </div>
     </div>
