--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
         <div class="form-group">
           <h2 class="banner">Contact</h2>
             <label class="banner" for="exampleFormControlInput1">Name</label>
-            <input style = "width:300px" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            <input style = "width:300px" class="form-control" id="exampleFormControlInput1" placeholder="name">
           </div>
           <div class="form-group">
             <div class="form-group">
