--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
     <div class="row">
         <div class="col-md-7">
-            <p>My hobbies include writing fiction stories, doing karaoke and theatre acting. But on my off days, you'll find me laying on the couch watching the show "It's Always Sunny in Philadelphia". I'm hoping to gain new computer skills through coding to help me work on websites and other tools</p>
+            <p>My hobbies include writing fiction stories, doing karaoke and theatre acting. But on my off days, you'll find me laying on the couch watching the show "It's Always Sunny in Philadelphia". I'm hoping to gain new computer skills through coding to help me work on websites and other tools.</p>
         </div>
     </div>
 
