--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light text-white">
+    <div class="personal-info">
     <a class="navbar-brand banner" href="index.html">Claudia Alpert</a>
+    <p class="email">claudiaalpert@gmail.com</p>
+    <p class="number">312-320-9782</p>
+  </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -44,6 +48,10 @@
     <div class="row">
         <div class="col-md-7">
             <img src="https://media-exp1.licdn.com/dms/image/C4D03AQHOXfpRV19ZiQ/profile-displayphoto-shrink_400_400/0?e=1607558400&v=beta&t=ieLpdOUw8cjtNu5k3PWI2XHl7_IMyUnOkXBEf4iKwVo" alt="Claudia Alpert" ALIGN="left" style=width:100 height="300">
+            <div class="profile-link">
+              <a href="https://github.com/Calpert">Github Profile</a>
+              <a href="https://www.linkedin.com/in/claudiaalpert/">Linkedin Page</a>
+            </div>
         <p>Welcome to my page! I am an aspiring software developer currently in the Northwestern Coding Bootcamp and I have a background in customer service. I have worked for big companies such as Starbucks, Grubhub, and even Disney World!</p>
 
 
@@ -53,6 +61,9 @@
         <div class="col-md-7">
             <p>My hobbies include writing fiction stories, doing karaoke and theatre acting. But on my off days, you'll find me laying on the couch watching the show "It's Always Sunny in Philadelphia". I'm hoping to gain new computer skills through coding to help me work on websites and other tools.</p>
         </div>
+    </div>
+    <div class="resume">
+      <a href="/Alpert Resume.docx.pdf">Download Resume</a>
     </div>
 
     </div>
