--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
     <div class="row">
         <div class="col-md-7">
-            <img src="https://media-exp1.licdn.com/dms/image/C4D03AQHOXfpRV19ZiQ/profile-displayphoto-shrink_400_400/0?e=1607558400&v=beta&t=ieLpdOUw8cjtNu5k3PWI2XHl7_IMyUnOkXBEf4iKwVo" alt="Claudia Alpert" ALIGN="left" style=width:100 height="300">
+            <img src="headshot.jpg" alt="Claudia Alpert" ALIGN="left" style=width:100 height="300">
             <div class="profile-link">
               <a href="https://github.com/Calpert">Github Profile</a>
               <a href="https://www.linkedin.com/in/claudiaalpert/">Linkedin Page</a>
@@ -59,11 +59,11 @@
     </div>
     <div class="row">
         <div class="col-md-7">
-            <p>My hobbies include writing fiction stories, doing karaoke and theatre acting. But on my off days, you'll find me laying on the couch watching the show "It's Always Sunny in Philadelphia". I'm hoping to gain new computer skills through coding to help me work on websites and other tools.</p>
+            <p>My hobbies include writing fiction stories, doing karaoke and theatre acting. But on my off days, you'll find me laying on the couch watching the show "It's Always Sunny in Philadelphia". I'm hoping to gain new computer skills through coding to help me work on websites, applications and other projects.</p>
         </div>
     </div>
     <div class="resume">
-      <a href="/Alpert Resume.docx.pdf">Download Resume</a>
+      <a href="/Alpert Resume.docx.pdf" download = "cAlpertResume">Download Resume</a>
     </div>
 
     </div>
