changed downloadable resume to google doc link

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <a href="https://github.com/Calpert">Github Profile</a>
               <a href="https://www.linkedin.com/in/claudiaalpert/">Linkedin Page</a>
             </div>
-        <p>Welcome to my page! I am an aspiring software developer currently in the Northwestern Coding Bootcamp and I have a background in customer service. I have worked for big companies such as Starbucks, Grubhub, and even Disney World!</p>
+        <p>Welcome to my page! I am an aspiring software developer currently in the Northwestern Coding Bootcamp and I have a background in customer service. I have worked for large companies including as Starbucks, Grubhub, and even Disney World!</p>
 
 
     </div>
@@ -63,7 +63,7 @@
         </div>
     </div>
     <div class="resume">
-      <a href="/Alpert Resume.docx.pdf" download = "cAlpertResume">Download Resume</a>
+      <a href="https://drive.google.com/file/d/1Bpjz-Kp0rwcOP-390-8s9xBd2IjGza_A/view?usp=sharing">Resume</a>
     </div>
 
     </div>
