changed linkedin and github to button links

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-alpha2/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
 <link rel="stylesheet" href="assets/css/style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <title>Claudia Alpert Porfolio</title>
 
 <link rel="stylesheet" type="text/css" href="style.css">
@@ -49,8 +50,8 @@
         <div class="col-md-7">
             <img src="headshot.jpg" alt="Claudia Alpert" ALIGN="left" style=width:100 height="300">
             <div class="profile-link">
-              <a href="https://github.com/Calpert">Github Profile</a>
-              <a href="https://www.linkedin.com/in/claudiaalpert/">Linkedin Page</a>
+              <a href="https://github.com/Calpert" class="fa fa-github"></a>
+              <a href="https://www.linkedin.com/in/claudiaalpert/" class="fa fa-linkedin"></a>
             </div>
         <p>Welcome to my page! I am an aspiring software developer currently in the Northwestern Coding Bootcamp and I have a background in customer service. I have worked for large companies including as Starbucks, Grubhub, and even Disney World!</p>
 
