--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
     </div>
     <div class="resume">
-      <a href="https://drive.google.com/file/d/1Bpjz-Kp0rwcOP-390-8s9xBd2IjGza_A/view?usp=sharing">Resume</a>
+      <a href="https://drive.google.com/file/d/1Bpjz-Kp0rwcOP-390-8s9xBd2IjGza_A/view?usp=sharing">Click here for Resume</a>
     </div>
 
     </div>
