--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
     </div>
     <div class="row">
         <div class="col-md-7">
-            <p>My hobbies include writing fiction stories, doing karaoke and theatre acting. But on my off days, you'll find me laying on the couch watching the show "It's Always Sunny in Philadelphia". I'm hoping to gain new computer skills through coding to help me work on websites, applications and other projects.</p>
+            <p>My hobbies include writing science fiction stories, doing karaoke and theatre acting. But on my off days, you'll find me laying on the couch watching the show "It's Always Sunny in Philadelphia". I'm hoping to gain new computer skills through coding to help me work on websites, applications and other projects.</p>
         </div>
     </div>
     <div class="resume">
-      <a href="https://drive.google.com/file/d/1Bpjz-Kp0rwcOP-390-8s9xBd2IjGza_A/view?usp=sharing">Click here for Resume</a>
+      <a href="https://drive.google.com/file/d/1Bpjz-Kp0rwcOP-390-8s9xBd2IjGza_A/view?usp=sharing">Click here to view my resume</a>
     </div>
 
     </div>
