--- a/contact.html
+++ b/contact.html
@@ -18,50 +18,51 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light text-white">
     <a class="navbar-brand banner" href="index.html">Claudia Alpert</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link banner" href="index.html">About<span class="sr-only">(current)</span></a>
+          <a href="index.html" target="_blank" class="btn btn-primary nav-link">About Me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link banner" href="portfolio.html">Portfolio</a>
+          <a href="portfolio.html" target="_blank" class="btn btn-primary nav-link">My Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link banner" href="contact.html">Contact</a>
-            </li>
-             </li>
-          </ul>
-        </div>
-      </nav>
-      <div class="container">
+          <a href="contact.html" target="_blank" class="btn btn-primary nav-link">Contact Me</a>
+        </li>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div class="container">
+    <div class="form-group">
+      <label class="banner" for="exampleFormControlInput1">Name</label>
+      <input style="width:300px" class="form-control" id="exampleFormControlInput1" placeholder="name">
+    </div>
+    <div class="form-group">
+      <div class="form-group">
+        <label class="banner" for="exampleFormControlInput1">Email</label>
+        <input style="width:300px" type="email" class="form-control" id="exampleFormControlInput1"
+          placeholder="name@example.com">
+      </div>
+      <div class="form-group">
         <div class="form-group">
-          <h2 class="banner">Contact</h2>
-            <label class="banner" for="exampleFormControlInput1">Name</label>
-            <input style = "width:300px" class="form-control" id="exampleFormControlInput1" placeholder="name">
-          </div>
-          <div class="form-group">
-            <div class="form-group">
-                <label class="banner" for="exampleFormControlInput1">Email</label>
-                <input style = "width:300px" type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-              </div>
-              <div class="form-group">
-                <div class="form-group">
-                    <label class="banner" for="exampleFormControlTextarea1">Message</label>
-                    <textarea style ="width:300px" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                  </div>
-                  <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false">
-                    Submit
-                  </button>
+          <label class="banner" for="exampleFormControlTextarea1">Message</label>
+          <textarea style="width:300px" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+        <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false">
+          Submit
+        </button>
 
       </div>
       <footer>Copyright 2020</footer>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
-</html>
 
+</html>
