--- a/index.html
+++ b/index.html
@@ -1,75 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta name="Description" content="Enter your description here"/>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-alpha2/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
-<link rel="stylesheet" href="assets/css/style.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<title>Claudia Alpert Porfolio</title>
 
-<link rel="stylesheet" type="text/css" href="style.css">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="Description" content="Enter your description here" />
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-alpha2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <title>Claudia Alpert Porfolio</title>
+
+  <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light text-white">
     <div class="personal-info">
-    <a class="navbar-brand banner" href="index.html">Claudia Alpert</a>
-    <p class="email">claudiaalpert@gmail.com</p>
-    <p class="number">312-320-9782</p>
-  </div>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand banner" href="index.html">Claudia Alpert</a>
+      <p class="email">claudiaalpert@gmail.com</p>
+      <p class="number">312-320-9782</p>
+    </div>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link banner" href="index.html">About<span class="sr-only">(current)</span></a>
+          <a href="index.html" target="_blank" class="btn btn-primary nav-link">About Me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link banner" href="portfolio.html">Portfolio</a>
+          <a href="portfolio.html" target="_blank" class="btn btn-primary nav-link">My Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link banner" href="contact.html">Contact</a>
-            </li>
-             </li>
-          </ul>
-        </div>
-      </nav>
-<div class="container">
-    <div class="row">
-        <div class="col-md-7">
-            <h2 class="banner">About Me</h2>
-        </div>
+          <a href="contact.html" target="_blank" class="btn btn-primary nav-link">Contact Me</a>
+        </li>
+      </ul>
     </div>
+  </nav>
+  <div class="container">
+
     <div class="row">
-        <div class="col-md-7">
-            <img src="headshot.jpg" alt="Claudia Alpert" ALIGN="left" style=width:100 height="300">
-            <div class="profile-link">
-              <a href="https://github.com/Calpert" class="fa fa-github"></a>
-              <a href="https://www.linkedin.com/in/claudiaalpert/" class="fa fa-linkedin"></a>
-            </div>
-        <p>Welcome to my page! I am an aspiring software developer currently in the Northwestern Coding Bootcamp and I have a background in customer service. I have worked for large companies including as Starbucks, Grubhub, and even Disney World!</p>
+      <div class="col-md-7">
+        <img src="headshot.jpg" alt="Claudia Alpert" ALIGN="left" style=width:100 height="300">
+        <div class="profile-link">
+          <a href="https://github.com/Calpert" class="fa fa-github"></a>
+          <a href="https://www.linkedin.com/in/claudiaalpert/" class="fa fa-linkedin"></a>
+        </div>
+        <p>Welcome to my page! I am an aspiring software developer currently in the Northwestern Coding Bootcamp and I
+          have a background in customer service. I have worked for large companies including as Starbucks, Grubhub, and
+          even Disney World!</p>
 
 
-    </div>
+      </div>
     </div>
     <div class="row">
-        <div class="col-md-7">
-            <p>My hobbies include writing science fiction stories, doing karaoke and theatre acting. But on my off days, you'll find me laying on the couch watching the show "It's Always Sunny in Philadelphia". I'm hoping to gain new computer skills through coding to help me work on websites, applications and other projects.</p>
-        </div>
+      <div class="col-md-7">
+        <p>My hobbies include writing science fiction stories, doing karaoke and theatre acting. But on my off days,
+          you'll find me laying on the couch watching the show "It's Always Sunny in Philadelphia". I'm hoping to gain
+          new computer skills through coding to help me work on websites, applications and other projects.</p>
+      </div>
     </div>
     <div class="resume">
-      <a href="https://drive.google.com/file/d/1Bpjz-Kp0rwcOP-390-8s9xBd2IjGza_A/view?usp=sharing">Click here to view my resume</a>
+      <a href="index.html" target="_blank" class="btn btn-primary resume">Resume</a>
     </div>
 
-    </div>
-    <footer>Copyright 2020</footer>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-alpha2/js/bootstrap.min.js"></script>
+  </div>
+  <footer>Copyright 2020</footer>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-alpha2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
