--- a/portfolio.html
+++ b/portfolio.html
@@ -25,13 +25,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link banner" href="index.html">About<span class="sr-only">(current)</span></a>
+          <a href="index.html" target="_blank" class="btn btn-primary nav-link">About Me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link banner" href="portfolio.html">Portfolio</a>
+          <a href="portfolio.html" target="_blank" class="btn btn-primary nav-link">My Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link banner" href="contact.html">Contact</a>
+          <a href="contact.html" target="_blank" class="btn btn-primary nav-link">Contact Me</a>
         </li>
         </li>
       </ul>
@@ -39,10 +39,6 @@
   </nav>
   <div class="container">
     <div class="row">
-      <div class="col-md-8">
-        <h2 class="banner">Portfolio</h2>
-      </div>
-
       <div class="col-md-12 col-lg-6 col-sm-6">
         <div class="card project-card shadow-lg" style="width: 18rem;">
           <img src="keepongiftin.png" class="card-img-top" alt="...">
