adjusted header and footer sizes

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,6 @@
         <li class="nav-item">
           <a href="contact.html" target="_blank" class="btn btn-primary nav-link">Contact Me</a>
         </li>
-        </li>
       </ul>
     </div>
   </nav>
@@ -90,9 +89,11 @@
           </div>
         </div>
       </div>
-  <footer>Copyright 2020</footer>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-alpha2/js/bootstrap.min.js"></script>
-</body>
+    </div>
+  </div>
+      <footer>Copyright 2020</footer>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-alpha2/js/bootstrap.min.js"></script>
+    </body>
 
 </html>
