--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light text-white">
     <div class="personal-info">
-      <a class="navbar-brand banner" href="index.html">Claudia Alpert</a>
+      <p class="navbar-brand banner" href="index.html">Claudia Alpert</p>
       <p class="email">claudiaalpert@gmail.com</p>
       <p class="number">312-320-9782</p>
     </div>
@@ -66,7 +66,7 @@
       </div>
     </div>
     <div class="resume">
-      <a href="index.html" target="_blank" class="btn btn-primary resume">Resume</a>
+      <a href="https://drive.google.com/file/d/1Bpjz-Kp0rwcOP-390-8s9xBd2IjGza_A/view?usp=sharing" target="_blank" class="btn btn-primary resume">Resume</a>
     </div>
 
   </div>
